<resources>
    <string name="app_name">Face Recognition</string>
    <string name="preview_photo">Preview Photo</string>
    <string name="register_face">register face</string>
    <string name="switch_camera">switch camera</string>
    <string name="face_detected">Face Detected</string>
    <string name="no_face_detected">No Face Detected!</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="toggle_flash">Toggle Flash</string>
    <string name="action_settings">Settings</string>
    <string name="scanned_data">Scanned Data</string>
    <string name="audio_recorder">Audio Recorder</string>
    <string name="start_recording">Start Recording</string>
    <string name="delete">Delete</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="play_recording">Play Recording</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="status">Status</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>